--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -80,9 +80,33 @@
 		{% if page.user.usertype == "0" %}
 		<div id="offers" class="col-md-6">
 			<h2>Offers</h2>
+			<br>
 			{% for offer in page.offers %}
-				<h5 class="offer"> {{ offer.description }}</h5>
-				<a class="btn btn-default" href="advertisement/{{offer.advertisement}}">View Ad</a>
+				<div class="profile-offer-listing">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h5>
+								{% if offer.status == "0" %}
+									<span class="label label-warning">Pending</span>
+								{% endif %}
+								{% if offer.status == "1" %}
+									<span class="label label-success">Accepted</span>
+								{% endif %}
+								{% if offer.status == "2" %}
+									<span class="label label-danger">Denied</span>
+								{% endif %}
+								{{ offer.parentAdvertisement.title }}
+							</h5>
+						</div>
+						<div class="panel-body">
+							<h5>Offer Description</h5>
+							{{ offer.description }}
+							<br>
+							<br>
+							<a class="btn btn-primary" style="float: right" href="/advertisement/{{offer.advertisement}}">View Advertisement</a>
+						</div>
+					</div>
+				</div>
 			{% endfor %}
 		</div>
 		{% endif %}
