--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -69,46 +69,67 @@
 			</form>
 		</div>
 		{% if page.user.usertype == "1" %}
-		<div id="adverts" class="col-md-6">
-			<h2>Advertisements</h2>
-			{% for advertisement in page.advertisements %}
-				<p class="advertisement"> {{ advertisement.title }}</p>
-				<a class="btn btn-default" href="advertisement/{{advertisement.id}}">Info</a>
-			{% endfor %}
-		</div>
-		{% endif %}
-		{% if page.user.usertype == "0" %}
-		<div id="offers" class="col-md-6">
-			<h2>Offers</h2>
-			<br>
-			{% for offer in page.offers %}
-				<div class="profile-offer-listing">
-					<div class="panel panel-default">
-						<div class="panel-heading">
-							<h5>
-								{% if offer.status == "0" %}
-									<span class="label label-warning">Pending</span>
-								{% endif %}
-								{% if offer.status == "1" %}
-									<span class="label label-success">Accepted</span>
-								{% endif %}
-								{% if offer.status == "2" %}
-									<span class="label label-danger">Denied</span>
-								{% endif %}
-								{{ offer.parentAdvertisement.title }}
-							</h5>
-						</div>
-						<div class="panel-body">
-							<h5>Offer Description</h5>
-							{{ offer.description }}
-							<br>
-							<br>
-							<a class="btn btn-primary" style="float: right" href="/advertisement/{{offer.advertisement}}">View Advertisement</a>
+			<div class="col-md-6">
+				<h2 style="margin-top: 0">My Advertisements</h2>
+				<br>
+				{% for advertisement in page.advertisements %}
+					<div class="profile-advertisement-listing">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h5>
+									{% if advertisement.status == "0" %}
+										<span class="label label-warning">Closed</span>
+									{% endif %}
+									{% if advertisement.status == "1" %}
+										<span class="label label-success">Available</span>
+									{% endif %}
+									{{ advertisement.title }}
+								</h5>
+							</div>
+							<div class="panel-body">
+								<h5>Description</h5>
+								<p>{{ advertisement.description }}</p>
+								<br>
+								<br>
+								<a class="btn btn-primary" style="float: right" href="/advertisement/{{ advertisement.id }}">View Advertisement</a>
+							</div>
 						</div>
 					</div>
-				</div>
-			{% endfor %}
-		</div>
+				{% endfor %}
+			</div>
+		{% endif %}
+		{% if page.user.usertype == "0" %}
+			<div class="col-md-6">
+				<h2 style="margin-top: 0">My Offers</h2>
+				<br>
+				{% for offer in page.offers %}
+					<div class="profile-offer-listing">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h5>
+									{% if offer.status == "0" %}
+										<span class="label label-warning">Pending</span>
+									{% endif %}
+									{% if offer.status == "1" %}
+										<span class="label label-success">Accepted</span>
+									{% endif %}
+									{% if offer.status == "2" %}
+										<span class="label label-danger">Denied</span>
+									{% endif %}
+									{{ offer.parentAdvertisement.title }}
+								</h5>
+							</div>
+							<div class="panel-body">
+								<h5>Offer Description</h5>
+								<p>{{ offer.description }}</p>
+								<br>
+								<br>
+								<a class="btn btn-primary" style="float: right" href="/advertisement/{{ offer.advertisement }}">View Advertisement</a>
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
 		{% endif %}
 	</div>
 </div>
