Add user profile page

--- a/views/advertisement/advertisement.html
+++ b/views/advertisement/advertisement.html
@@ -12,10 +12,15 @@
             {% endif %}
             {{ page.advertisement.title }}
             {% if page.advertisement.status == "1" %}
-                <a class="btn btn-primary advertisement-make-offer" href="/advertisement/makeoffer/{{ page.advertisement.id}}">Make Offer!</a>
+                {% if page.user.usertype != "1" %}
+                    <a class="btn btn-primary advertisement-make-offer" href="/advertisement/makeoffer/{{ page.advertisement.id}}">Make Offer!</a>
+                {% endif %}
+            {% endif %}
+            {% if page.advertisement.owner == page.user.id %}
+                <a class="btn btn-primary advertisement-make-offer" href="/offers/view/{{ page.advertisement.id }}">View Offers</a>
             {% endif %}
         </h3>
-        <h5 class="info-subheading">Advertisement</h5>
+        <h5 class="info-subheading">Advertisement, Posted by <a href="/user/{{ page.advertisement.parentOwner.id }}">{{ page.advertisement.parentOwner.name }}</a></h5>
 
         <br>
         <br>
