Add creating of advertisements

--- a/views/advertisement/advertisement.html
+++ b/views/advertisement/advertisement.html
@@ -49,6 +49,10 @@
             <div class="col-md-9">
                 <p>{{ page.advertisement.description }}</p>
                 <h5 class="info-subheading">Description</h5>
+
+                <br>
+                <iframe height="450" frameborder="0" style="border:0; width: 100%" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDAxEaR0mjQoxocpuLs3JbZW4VG4EG5ZSA&q={{ page.advertisement.location }}" allowfullscreen></iframe>
+                <h5 class="info-subheading">Location</h5>
             </div>
         </div>
 
