--- a/views/user/user.html
+++ b/views/user/user.html
@@ -45,8 +45,8 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h5>
-                                    {% if advertisement.status == "0" %}
-                                    <span class="label label-warning">Closed</span>
+                                    {% if advertisement.status == "2" %}
+                                    <span class="label label-danger">Closed</span>
                                     {% endif %}
                                     {% if advertisement.status == "1" %}
                                     <span class="label label-success">Available</span>
