Add opening and closing of advertisements

--- a/less/custom/global.less
+++ b/less/custom/global.less
@@ -15,6 +15,7 @@ body {
   margin-bottom: 5px;
 }
 
-.advertisement-make-offer {
+.advertisement-control-button {
   float: right;
+  margin-left: 5px;
 }
