--- a/less/custom/agency-theme.less
+++ b/less/custom/agency-theme.less
@@ -71,6 +71,13 @@ h6 {
   background-color: #fed136;
 }
 
+.btn-success {
+  text-transform: uppercase;
+  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
+  color: #fff;
+}
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
