Add rating for offers

--- a/less/custom/global.less
+++ b/less/custom/global.less
@@ -19,3 +19,17 @@ body {
   float: right;
   margin-left: 5px;
 }
+
+.rating {
+  h1 {
+    border: 2px solid transparent;
+    padding: 5px;
+    display: inline-block;
+  }
+  .selected {
+    border: 2px solid gold;
+    i {
+      color: gold;
+    }
+  }
+}
