--- a/views/global/footer.html
+++ b/views/global/footer.html
@@ -3,6 +3,7 @@
 	<script src="/js/jquery.numeric.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/toastr.min.js"></script>
+    <script src="/js/jquery.raty.js"></script>
 	<script src="/js/user/profile.js"></script>
 	<script src="/js/session/signup.js"></script>
     <script src="/js/custom.js"></script>
