Edited about page and created faq page

--- a/views/about.html
+++ b/views/about.html
@@ -6,21 +6,46 @@
                 About Us
             </div>
             <div class="intro-follow">
-                We're here to help you
+                At Labourhire we know how difficult it can be to find good labourers at short notice.<br /><br />
+                We have made it our mission to help employers and labourers to find what they are looking for as quickly as possible.
             </div>
 
         </div>
     </div>
 </header>
-<section>
-    <div class="container">
-        <div class="about-sub-heading">
-            What we offer
+    <section>
+        <div class="container" style="text-align: center">
+            <div class="col-md-12">
+                <div class="about-sub-heading">
+                    How it works
+                </div>
+                <p class="about-para">
+                    Finding work or a labourer at short notice is easy with Labourhire.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <h3>Employers</h3>
+                <p>Set up your profile and show off your qualifications. Browse advertisements from dozens of employers in your area and post
+                    offers to jobs you like the look of.<br /> You will be rewarded for solid work with higher ratings, increasing your
+                    chances of being given jobs in the future, then you can just sit back and watch the jobs roll in.</p>
+            </div>
+            <div class="col-md-6">
+                <h3>Labourers</h3>
+                <p>Set up a company profile and begin posting advertisements whenever those unexpected jobs creep up on you.
+                    You can expect to see offers within just minutes! Scan over the offers for someone with a high rating, or choose to
+                    give a newbie a chance to show their worth. As an employer, you are in control of who you hire.</p>
+            </div>
         </div>
-        <div>
-            <p class="about-para">
-                Information about our company, bla bla bla bla bla
-            </p>
+    </section>
+    <section class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2 class="section-heading">Contact Us</h2>
+                    <h4>Phone: 123456789</h4>
+                    <h4>Email: pretend@email.com</h4>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
 </section>
