--- a/views/global/header.html
+++ b/views/global/header.html
@@ -39,6 +39,9 @@
                     <li>
                         <a class="page-scroll" href="/about">About Us</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/faq">FAQ</a>
+                    </li>
                     {% if page.loggedin == true %}
                         {% if page.user.usertype == "1" %}
                             <li>
