--- a/less/custom/global.less
+++ b/less/custom/global.less
@@ -20,16 +20,11 @@ body {
   margin-left: 5px;
 }
 
-.rating {
-  h1 {
-    border: 2px solid transparent;
-    padding: 5px;
-    display: inline-block;
+.panel-listing {
+  .panel-body {
+    display: none;
   }
-  .selected {
-    border: 2px solid gold;
-    i {
-      color: gold;
-    }
+  .panel-heading {
+    cursor: pointer;
   }
 }
