--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -73,7 +73,7 @@
 				<h2 style="margin-top: 0">My Advertisements</h2>
 				<br>
 				{% for advertisement in page.advertisements %}
-					<div class="profile-advertisement-listing">
+					<div class="profile-advertisement-listing panel-listing">
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<h5>
@@ -103,7 +103,7 @@
 				<h2 style="margin-top: 0">My Offers</h2>
 				<br>
 				{% for offer in page.offers %}
-					<div class="profile-offer-listing">
+					<div class="profile-offer-listing panel-listing">
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<h5>
