--- a/views/user/user.html
+++ b/views/user/user.html
@@ -50,7 +50,7 @@
                     <h2 style="margin-top: 0">Their Advertisements</h2>
                     <br>
                     {% for advertisement in page.advertisements %}
-                    <div class="profile-advertisement-listing">
+                    <div class="profile-advertisement-listing panel-listing">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h5>
