Add accepting and declining of offers, as well as view offers page

--- a/less/custom/agency-theme.less
+++ b/less/custom/agency-theme.less
@@ -71,7 +71,7 @@ h6 {
   background-color: #fed136;
 }
 
-.btn-success {
+.btn-success, .btn-danger {
   text-transform: uppercase;
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700;
