--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -114,7 +114,7 @@
 										<span class="label label-success">Accepted</span>
 									{% endif %}
 									{% if offer.status == "2" %}
-										<span class="label label-danger">Denied</span>
+										<span class="label label-danger">Declined</span>
 									{% endif %}
 									{% if offer.status == "3" %}
 										<span class="label label-default">Completed</span>
