--- a/views/session/signup.html
+++ b/views/session/signup.html
@@ -70,6 +70,11 @@
             <i class="fa fa-desktop form-control-feedback"></i>
         </div>
 
+        <div class="form-group has-feedback" id="su_availability">
+            <label for="signup[availability]" class="sr-only">Website</label>
+            <input id="su_availability_input" type="text" class="form-control input-lg" name="signup[availability]" required placeholder="Availability">
+        </div>
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
     </form>
 
