--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -1,22 +1,37 @@
 <div class="container">
-	<h1>Profile</h1>
+	<h1>Profile
+		<a style="float: right" href="/user/{{ page.user.id }}" class="btn btn-primary">
+			My Public Profile
+		</a>
+	</h1>
 	<div id="detailsSection" class="row">
 		<div id="displayDetails" class="col-md-6">
-			<div id="details_name"><h4>Name</h4><p>{{page.user.name}}</p></div>
+			{% if page.user.usertype == "0" %}
+				<h3><span class="label label-primary">Worker</span></h3>
+			{% endif %}
 			{% if page.user.usertype == "1" %}
-			<div id="details_companyname"><h4>Company Name</h4><p>{{page.user.companyname}}</p></div>
-			<div id="details_companylocation"><h4>Company Location</h4><p>{{page.user.companylocation}}</p></div>
+				<h3><span class="label label-info">Employer</span></h3>
+			{% endif %}
+			<br>
+			<div id="details_name">
+				<h4>Name</h4>
+				<p>{{page.user.name}}</p>
+			</div>
+			{% if page.user.usertype == "1" %}
+				<div id="details_companyname"><h4>Company Name</h4><p>{{page.user.companyname}}</p></div>
+				<div id="details_companylocation"><h4>Company Location</h4><p>{{page.user.companylocation}}</p></div>
 			{% endif %}
 			<div id="details_email"><h4>Email</h4><p>{{page.user.email}}</p></div>
 			<div id="details_contactno"><h4>Contact Number</h4><p>{{page.user.contactno}}</p></div>
 			<div id="details_about"><h4>About</h4><p id="userAbout">{{page.user.aboutme}}</p></div>
 
 			{% if page.user.usertype == "0" %}
-			<div id="details_qualifications"><h4>Qualifications</h4><p>{{page.user.qualifications}}</p></div>
+				<div id="details_qualifications"><h4>Qualifications</h4><p>{{page.user.qualifications}}</p></div>
+				<div id="details_availability"><h4>Availability</h4><p>{{page.user.availability}}</p></div>
 			{% endif %}
 
 			{% if page.user.usertype == "1" %}
-			<div id="details_website"><h4>Website</h4><p>{{page.user.website}}</p></div>
+				<div id="details_website"><h4>Website</h4><p>{{page.user.website}}</p></div>
 			{% endif %}
 
 			<br>
@@ -30,14 +45,14 @@
 					<input type="text" value="{{page.user.name}}" name="profile[name]" id="profile[name]" required autofocus class="form-control"/>
 				</div>
 				{% if page.user.usertype == "1" %}
-				<div class="form-group has-feedback">
-					<label for="profile[companyname]">Company Name</label>
-					<input type="text" id="profile[companyname]" name="profile[companyname]" value="{{page.user.companyname}}" required class="form-control"/>
-				</div>
-				<div class="form-group has-feedback">
-					<label for="profile[companylocation]">Company Location</label>
-					<input type="text" id="profile[companylocation]" name="profile[companylocation]" value="{{page.user.companylocation}}" class="form-control"/>
-				</div>
+					<div class="form-group has-feedback">
+						<label for="profile[companyname]">Company Name</label>
+						<input type="text" id="profile[companyname]" name="profile[companyname]" value="{{page.user.companyname}}" required class="form-control"/>
+					</div>
+					<div class="form-group has-feedback">
+						<label for="profile[companylocation]">Company Location</label>
+						<input type="text" id="profile[companylocation]" name="profile[companylocation]" value="{{page.user.companylocation}}" class="form-control"/>
+					</div>
 				{% endif %}
 				<div class="form-group has-feedback">
 					<label for="profile[email]">Email</label>
@@ -45,17 +60,21 @@
 				</div>
 				<div class="form-group has-feedback">
 					<label for="profile[contactno]">Contact Number</label>
-					<input type="text" value="{{page.user.contactno}}" id="profile[contactno]" name="profile[contactno]" class="form-control" required/>
+					<input type="text" value="{{page.user.contactno}}" id="profile[contactno]" name="profile[contactno]" class="form-control numeric" required/>
 				</div>
 				<div class="form-group has-feedback">
 					<label for="profile[aboutme]">About Me</label>
 					<textarea id="profile[aboutme]" name="profile[aboutme]" class="form-control input-lg" rows="3" required>{{page.user.aboutme}}</textarea>
 				</div>
-					{% if page.user.usertype == "0" %}
-				<div class="form-group has-feedback">
-					<label for="profile[qualifications]">Qualifications</label>
-					<textarea id="profile[qualifications]" name="profile[qualifications]" class="form-control input-lg" rows="3" value="{{page.user.qualifications}}">{{page.user.qualifications}}</textarea>
-				</div>
+				{% if page.user.usertype == "0" %}
+					<div class="form-group has-feedback">
+						<label for="profile[qualifications]">Qualifications</label>
+						<textarea id="profile[qualifications]" name="profile[qualifications]" class="form-control input-lg" rows="3" value="{{page.user.qualifications}}">{{page.user.qualifications}}</textarea>
+					</div>
+					<div class="form-group has-feedback">
+						<label for="profile[availability]">Availability</label>
+						<input type="text" value="{{page.user.availability}}" name="profile[availability]" id="profile[availability]" required autofocus class="form-control"/>
+					</div>
 				{% endif %}
 				{% if page.user.usertype == "1" %}
 				<div class="form-group has-feedback">
