--- a/views/offers/view.html
+++ b/views/offers/view.html
@@ -32,7 +32,7 @@
                 <p>{{ offer.description }}</p>
                 {% if offer.status == "1" %}
                 <hr>
-                <h5>Employee Details</h5>
+                <h5>Worker Details</h5>
                 <h6 style="margin-left: 10px">{{ offer.ownerDetails.name }}</h6>
                 <h6 style="margin-left: 10px">{{ offer.ownerDetails.email }}</h6>
                 <h6 style="margin-left: 10px">{{ offer.ownerDetails.contactno }}</h6>
