Add search function

--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,14 @@
             <div class="intro-heading">
                 Start searching for jobs now
             </div>
-            <div class="intro-search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-primary" type="button">Search</button>
-                    </span>
+                <div class="intro-search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search..." name="query" id="home-search-input" required autofocus>
+                        <span class="input-group-btn">
+                            <button class="btn btn-primary" id="home-search" type="submit">Search</button>
+                        </span>
+                    </div>
                 </div>
-            </div>
         </div>
     </div>
 </header>
