--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     </div>
 </header>
 <div class="container advertisements-container">
-    <h2>Some new advertisements</h2>
+    <h2>New Advertisements</h2>
     <div id="advertisements-holder">
     </div>
 </div>
