--- a/views/advertisement/advertisement.html
+++ b/views/advertisement/advertisement.html
@@ -53,7 +53,7 @@
                 <h5 class="info-subheading">Posted On</h5>
             </div>
             <div class="col-md-9">
-                <p>{{ page.advertisement.description }}</p>
+                <h4>{{ page.advertisement.description }}</h4>
                 <h5 class="info-subheading">Description</h5>
 
                 <br>
