--- a/views/user/user.html
+++ b/views/user/user.html
@@ -34,7 +34,7 @@
                 <h5 class="info-subheading">About</h5>
                 {% if page.userProfile.usertype == "0" %}
                     <h4>{{ page.userProfile.qualifications }}</h4>
-                    <h5 class="info-subheading">About</h5>
+                    <h5 class="info-subheading">Qualifications</h5>
                     <h4>{{ page.userProfile.availability }}</h4>
                     <h5 class="info-subheading">Availability</h5>
                 {% endif %}
